调整类，优化广播